# zectrixPCTools

./: .gitignore  README.md  index.html  neutralino.config.json  package-lock.json  package.json  requirements.txt  styles.css  test_debug.html  vite.config.ts
.claude/: settings.local.json
extensions/hotkey/: Cargo.toml
extensions/hotkey/src/: main.rs
src/: api.ts  controller.ts  main.ts  storage.ts
