[package]
name = "hotkey-ext"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-icon = "0.22"
rdev = "0.5"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse"] }
windows-core = "0.58"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
